[package]
name = "termkey-rs"
version = "0.17.0"
authors = ["Ben Longbons <b.r.longbons@gmail.com>",
           "Mathias Hällman <github@mths.se>"]
build = "build.rs"

[lib]
name = "termkey"
test = false
doctest = false

[[test]]
name = "integration"
doctest = false

[dependencies]
bitflags = "0.3.2"
libc = "0.1.10"
