[package]
name = "termkey-rs"
version = "0.17.0"
authors = ["Ben Longbons <b.r.longbons@gmail.com>",
           "Mathias Hällman <github@mths.se>"]
description = "Rust wrapper for libtermkey"
license = "Unlicensed"
repository = "https://github.com/mathall/termkey-rs"
build = "build.rs"

[lib]
name = "termkey"
test = false
doctest = false

[[test]]
name = "integration"
doctest = false

[dependencies]
bitflags = "0.5.0"
libc = "0.2.8"
