[package]
name = "termkey-rs"
version = "0.17.0"
authors = ["Ben Longbons <b.r.longbons@gmail.com>",
           "Mathias Hällman <github@mths.se>"]
description = "Rust wrapper for libtermkey"
license = "Unlicensed"
repository = "https://github.com/mathall/termkey-rs"
build = "build.rs"
edition = "2018"

[lib]
name = "termkey"
test = false
doctest = false

[[test]]
name = "integration"
doctest = false

[dependencies]
bitflags = "1.2.1"
libc = "0.2.82"
